--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,21 @@
 /* Add CSS Styling */
+
+.odd {
+  background-color: rgb(250, 164, 214);
+  font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#num2 {
+  color: rgb(11, 34, 240);
+  font-size: 36px;
+}
+
+.number3 {
+  font-size: 24px;
+}
+
+#num4 {
+  background-color: lightgreen;
+  font-size: 24px;
+  font-weight: bold;
+}
