--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  /* margin: 8px auto; */
 }
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  /* margin: 8px; */
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
+  margin-bottom: 8px;
 }
 
 .button-container {
+  /* display: inline-block; */
   background: #e3f4ff;
+  padding: 8px;
+  /* margin: 8px;*/
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
