--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,15 +1,18 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
   width: 100px;
   height: 100px;
+  display: flex;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  padding-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,20 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.images {
+  display: flex;
+  justify-content: center;
+}
+
+.item {
+  width: 200px;
+  padding-inline-start: 52px;
+  /* gap: 52px; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* flex-shrink: 2; */
 }
