--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,14 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* align-items: center; 
+  flex-shrink: 2; */
 }
 
 img {
   width: 600px;
+  margin: 10px;
 }
 
 button {
@@ -16,6 +22,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin: 0 4px;
 }
 
 input {
@@ -23,4 +31,58 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style-type: none;
+  /* margin: 10px; */
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: #666666;
+  padding: 10px; /* padding: 8px 16px; */
+  /* display: flex;
+  flex-wrap: nowrap; */
+}
+
+.footer {
+  display: flex;
+  /* align-items: flex-end; */
+  align-items: flex-end;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  gap: 16px;
+}
+
+.header,
+.footer {
+  display: flex;
+  padding: 20px;
+}
+.header {
+  justify-content: space-between;
+}
+
+.footer {
+  justify-content: space-between;
+  background-color: #eeeeee;
+}
+
+.left-links,
+.right-links {
+  color: black;
+  display: flex;
+  gap: 16px;
+  /* padding: 10px; */
 }
